[The compiled .css file would help :)] - Fix for in-post image alignment.

--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ img, figure {
   margin: 0;
   border-style: none; }
 
+figure.aligncenter {
+  margin: 0 auto; }
+
 figcaption {
   position: absolute;
   left: 0;
